--- a/ckanext/berlin/theme/templates/home/about.html
+++ b/ckanext/berlin/theme/templates/home/about.html
@@ -8,7 +8,7 @@
   <div py:match="content">
     <h2>About ${g.site_title}</h2>
     
-    <p>Datenregister Berlin ist die nicht-öffentliche Datenbank hinter dem öffentlichen <a href="http://daten.berlin.de">Open Data Portal des Landes Berlin</a>. Hier werden Metadaten zu neuen Datensätze zum Datenportal hinzugefügt und gewartet.</p>
+    <p><strong>Datenregister Berlin</strong> ist die nicht-öffentliche Datenbank hinter dem öffentlichen <a href="http://daten.berlin.de">Open Data Portal des Landes Berlin</a>. Hier werden Metadaten zu neuen Datensätze zum Datenportal hinzugefügt und gewartet.</p>
 
     <h2>Impressum</h2>
     
