--- a/ckanext/berlin/theme/templates/home/index.html
+++ b/ckanext/berlin/theme/templates/home/index.html
@@ -16,7 +16,7 @@
         <a href="http://daten.berlin.de/">Berliner Datenportal</a>. Hier werden Metadaten der dezentralen Berliner Datensätze zentral verwaltet.
       </p>
     </div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="span4">
         <div class="action-box">
           <div class="action-box-inner find clearfix">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div py:if="c.groups" class="row whoelse">
       <div class="span12">
         <h2>Who else is here?</h2>
