removed CKAN license statement on about page (was wrong)

--- a/ckanext/berlin/theme/templates/home/about.html
+++ b/ckanext/berlin/theme/templates/home/about.html
@@ -26,9 +26,8 @@
            <a href="http://ckan.org">CKAN</a> v${c.__version__}, 
           &copy; 2012
           <img src="http://assets.okfn.org/images/logo/okf_logo_white_and_green_tiny.png" id="footer-okf-logo" />
-          <a href="http://okfn.org/">Open Knowledge Foundation</a>,
-          Licensed under the <a href="http://opendatacommons.org/licenses/odbl/1.0/">Open Database License</a>
-      </li>
+          <a href="http://okfn.org/">Open Knowledge Foundation</a>
+       </li>
     </ul>
     
 
