--- a/ckanext/berlin/theme/templates/layout_base.html
+++ b/ckanext/berlin/theme/templates/layout_base.html
@@ -74,7 +74,7 @@
           <div id="mainmenu">
             <span py:if="h.check_access('package_create')">${h.nav_link(_('Add a dataset'), controller='package', action='new')}</span>
             ${h.nav_link(_('Search'), controller='package', action='search', highlight_actions = 'new index')}
-            ${h.nav_named_link(_('Groups'), name='%s_index' % h.default_group_type() )}
+            <a href="/group">Kategorien</a>
             ${h.nav_link(_('About'), controller='home', action='about')}
           </div>
         </div>
