Adding form fields to set the dataset type
(data, document or application)

--- a/ckanext/berlin/theme/templates/package/new.html
+++ b/ckanext/berlin/theme/templates/package/new.html
@@ -4,7 +4,7 @@
   py:strip="">
   
   <py:def function="page_title">Add - Datasets</py:def>
-  <py:def function="page_heading">Add a Dataset</py:def>
+  <py:def function="page_heading">Datensatz (oder Dokument) hinzufügen</py:def>
 
   <py:def function="body_class">${h.literal('no-sidebar')}</py:def>
 
