--- a/ckanext/berlin/theme/templates/package/new_package_form.html
+++ b/ckanext/berlin/theme/templates/package/new_package_form.html
@@ -41,6 +41,25 @@
     <div class="controls"><p class="instructions basic"><em>kennzeichnet ein Pflichtfeld</em></p></div>
   </div>
 
+  <div class"control-group type-field required-field">
+    <label class="control-label" for="type">Art<i class="icon-asterisk icon-large"></i></label>
+    <div class="controls">
+      <select id="type" name="type">
+        <option>Anwendung</option>
+        <option selected="selected">Daten</option>
+        <option>Dokument</option>
+      </select>
+      <p class="instructions basic">Art des Datensatzes<br/>
+          Die folgenden drei Möglichkeiten werden unterschieden:
+       <ul>
+        <li>Daten</li>
+        <li>Dokumente</li>
+        <li>Anwendungen</li>
+       </ul>
+      </p>
+    </div>
+  </div>
+
   <div class="control-group title-field required-field">
     <label class="control-label" for="title">Titel<i class="icon-asterisk icon-large"></i></label>
     <div class="controls">
