Adding form fields to set the dataset type

--- a/ckanext/berlin/theme/templates/package/new_package_form.html
+++ b/ckanext/berlin/theme/templates/package/new_package_form.html
@@ -41,7 +41,7 @@
     <div class="controls"><p class="instructions basic"><em>kennzeichnet ein Pflichtfeld</em></p></div>
   </div>
 
-  <div class"control-group type-field required-field">
+  <div class="control-group type-field required-field">
     <label class="control-label" for="type">Art<i class="icon-asterisk icon-large"></i></label>
     <div class="controls">
       <select id="type" name="type">
