--- a/ckanext/berlin/theme/templates/package/new_package_form.html
+++ b/ckanext/berlin/theme/templates/package/new_package_form.html
@@ -359,7 +359,7 @@
 <fieldset class="tab-pane" id="resources">
   <legend>Dateien und APIs</legend>
   <p class="instructions basic">Die Dateien, die die Daten enthalten, bzw. Adresse der API.
-  Es können mehrere Datein angegeben werden, z.B. falls mehrere Formate vorliegen.</p>
+  Es können mehrere Dateien angegeben werden, z.B. falls mehrere Formate vorliegen.</p>
   <div class="row">
     <div class="span4">
       <ul class="resource-list resource-list-edit drag-drop-list">
