introduce https everywhere

--- a/ckanext/berlin/theme/templates/layout_base.html
+++ b/ckanext/berlin/theme/templates/layout_base.html
@@ -140,7 +140,7 @@
                   <a href="/de/about">Was ist das?</a>
               </li>
               <li>
-                  Portal-Hauptseite: <a href="http://daten.berlin.de/">daten.berlin.de</a>
+                  Portal-Hauptseite: <a href="https://daten.berlin.de/">daten.berlin.de</a>
               </li>
               <li>API: 
                 ${h.link_to(_('Einstieg'), h.url_for(controller='api', action='get_api', ver=1))} |
