--- a/ckanext/berlin/theme/templates/package/new_package_form.html
+++ b/ckanext/berlin/theme/templates/package/new_package_form.html
@@ -487,7 +487,7 @@
       </span>
     </dd>
   </dl>
-  <p class="instructions basic">Legt fest, ob der Datensatz auf dem Datenportal <a href='http://daten.berlin.de' title="Berlin Open Data">daten.berlin.de</a> sichtbar ist.</p>
+  <p class="instructions basic">Legt fest, ob der Datensatz auf dem Datenportal <a href='https://daten.berlin.de' title="Berlin Open Data">daten.berlin.de</a> sichtbar ist.</p>
 </fieldset>
 
 <fieldset id='summary'>
