--- a/ckanext/berlin/theme/templates/home/about.html
+++ b/ckanext/berlin/theme/templates/home/about.html
@@ -8,7 +8,7 @@
   <div py:match="content">
     <h2>About ${g.site_title}</h2>
     
-    <p><strong>Datenregister Berlin</strong> ist die nicht-öffentliche Datenbank hinter dem öffentlichen <a href="http://daten.berlin.de">Open Data Portal des Landes Berlin</a>. Hier werden Metadaten zu neuen Datensätze zum Datenportal hinzugefügt und gewartet.</p>
+    <p><strong>Datenregister Berlin</strong> ist die nicht-öffentliche Datenbank hinter dem öffentlichen <a href="https://daten.berlin.de">Open Data Portal des Landes Berlin</a>. Hier werden Metadaten zu neuen Datensätze zum Datenportal hinzugefügt und gewartet.</p>
 
     <h2>Impressum</h2>
     
@@ -19,7 +19,7 @@
       </li>
       <li>
           Betreiber:<br/>
-          <a href="http://www.berlinonline.de/wir-ueber-uns/impressum/">BerlinOnline Stadtportal GmbH &amp; Co. KG</a>
+          <a href="https://www.berlinonline.de/wir-ueber-uns/impressum/">BerlinOnline Stadtportal GmbH &amp; Co. KG</a>
       </li>
       <li>
           Basiert auf:<br/>
