--- a/ckanext/berlin/theme/templates/home/index.html
+++ b/ckanext/berlin/theme/templates/home/index.html
@@ -13,7 +13,7 @@
       <h1 class="page_heading">Welcome to ${g.site_title}!</h1>
       <p i18n:msg="title">
         ${g.site_title} ist das CKAN-Backoffice für das 
-        <a href="http://daten.berlin.de/">Berliner Datenportal</a>. Hier werden Metadaten der dezentralen Berliner Datensätze zentral verwaltet.
+        <a href="https://daten.berlin.de/">Berliner Datenportal</a>. Hier werden Metadaten der dezentralen Berliner Datensätze zentral verwaltet.
       </p>
     </div>
     <!-- <div class="row">
