more references changed to https

--- a/ckanext/berlin/theme/templates/home/about.html
+++ b/ckanext/berlin/theme/templates/home/about.html
@@ -25,7 +25,7 @@
           Basiert auf:<br/>
            <a href="http://ckan.org">CKAN</a> v${c.__version__}, 
           &copy; 2012
-          <img src="http://assets.okfn.org/images/logo/okf_logo_white_and_green_tiny.png" id="footer-okf-logo" />
+          <img src="https://assets.okfn.org/images/logo/okf_logo_white_and_green_tiny.png" id="footer-okf-logo" />
           <a href="http://okfn.org/">Open Knowledge Foundation</a>
        </li>
     </ul>
